# FTP-Server-and-Client

./: CMakeLists.txt  CommandExecutor.h  CommandExecutor.h.save  README.md  TCPClient.cpp  TCPClient.h  TCPClient.h.save  TCPClientConnection.cpp  TCPConnection.h  TCPConnection.h.save  TCPServer.cpp  TCPServer.cpp.save  TCPServer.h  TCPServer.h.save  TCPServerConnection.cpp  TCPServerConnection.cpp.save  TCPServerConnection.h  client  client.cpp  client.cpp.save  makefile  makefile.sh  server  server.cpp  server_spam.sh
include/: CommandExecutor.h  TCPClientConnection.h  TCPServer.h  TCPServerConnection.h
src/: TCPServer.cpp  TCPServerConnection.cpp  client.cpp
test/: foo.txt  test.cpp
